rust/schema/tests/snapshots/patch__change-and-reorder-headings.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 32
      characterPercent: 100
  content:
    - type: Heading
      level: 1
      content:
        - type: Text
          value:
            string: heading1
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 8
          characterPercent: 100
    - type: Heading
      level: 2
      content:
        - type: Text
          value:
            string: heading2
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 8
          characterPercent: 100
    - type: Heading
      level: 3
      content:
        - type: Text
          value:
            string: heading3
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 8
          characterPercent: 100
    - type: Heading
      level: 4
      content:
        - type: Text
          value:
            string: heading4
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 8
          characterPercent: 100
new:
  type: Article
  content:
    - type: Heading
      level: 2
      content:
        - type: Text
          value:
            string: heading2
    - type: Heading
      level: 1
      content:
        - type: Text
          value:
            string: heading1
    - type: Heading
      level: 4
      content:
        - type: Text
          value:
            string: heading4delta
    - type: Heading
      level: 1
      content:
        - type: Text
          value:
            string: heading3
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 37
      characterPercent: 100
  content:
    - type: Heading
      level: 2
      content:
        - type: Text
          value:
            string: heading2
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 8
          characterPercent: 100
    - type: Heading
      level: 1
      content:
        - type: Text
          value:
            string: heading1
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 8
          characterPercent: 100
    - type: Heading
      level: 4
      content:
        - type: Text
          value:
            string: heading4delta
            authorship:
              - - 1
                - 0
                - 0
                - 8
              - - 1
                - 1
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 13
          characterPercent: 100
    - type: Heading
      level: 1
      content:
        - type: Text
          value:
            string: heading3
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 8
          characterPercent: 100
ops:
  - - - content
    - Move:
        - - 0
          - 1
        - - 3
          - 2
  - - - content
      - 2
      - content
      - 0
      - value
    - Apply:
        - Insert:
            - 8
            - delta
  - - - content
      - 3
      - level
    - Set: 1
