rust/schema/tests/snapshots/patch__change-code-chunk-code-and-lang.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops, authors_before, authors_after }"
---
old:
  type: Article
  content:
    - type: CodeChunk
      code: 1 + 2
      programmingLanguage: python
new:
  type: Article
  content:
    - type: CodeChunk
      code: 1 + 3
      programmingLanguage: r
ops:
  - - - content
      - 0
      - code
    - Apply:
        - Replace:
            - start: 4
              end: 5
            - "3"
  - - - content
      - 0
      - programmingLanguage
    - Set: r
authors_before: 1
authors_after: 1
