rust/schema/tests/snapshots/patch__change-last-paragraph.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops, authors_before, authors_after }"
---
old:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
    - type: Paragraph
      content:
        - type: Text
          value: para3
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
    - type: Paragraph
      content:
        - type: Text
          value: para3delta
ops:
  - - - content
      - 2
      - content
      - 0
      - value
    - Apply:
        - Insert:
            - 5
            - delta
authors_before: 3
authors_after: 3
