rust/schema/tests/snapshots/patch__insert-code-and-heading.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  content:
    - type: Heading
      level: 1
      content:
        - type: Text
          value:
            string: heading1
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para1
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para2
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Heading
      level: 2
      content:
        - type: Text
          value:
            string: heading2
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para3
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
new:
  type: Article
  content:
    - type: Heading
      level: 1
      content:
        - type: Text
          value: heading1
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: CodeBlock
      code: ""
      programmingLanguage: python
    - type: Paragraph
      content:
        - type: Text
          value: para2
    - type: Heading
      level: 2
      content:
        - type: Text
          value: heading3
    - type: Heading
      level: 2
      content:
        - type: Text
          value: heading2
    - type: Paragraph
      content:
        - type: Text
          value: para3
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  content:
    - type: Heading
      level: 1
      content:
        - type: Text
          value:
            string: heading1
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para1
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: CodeBlock
      code:
        string: ""
        authorship:
          - - 1
            - 0
            - 0
            - 0
      programmingLanguage: python
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para2
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Heading
      level: 2
      content:
        - type: Text
          value:
            string: heading3
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
    - type: Heading
      level: 2
      content:
        - type: Text
          value:
            string: heading2
            authorship:
              - - 1
                - 0
                - 0
                - 8
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para3
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
ops:
  - - - content
    - Insert:
        - - 2
          - type: CodeBlock
            code: ""
            programmingLanguage: python
        - - 4
          - type: Heading
            level: 2
            content:
              - type: Text
                value: heading3
